crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__workspace_discoverer@3tier-resolution-mixed.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: combined_snapshot
---
## SearchRoot
Discovered workspace at: 3tier-resolution-mixed/pixi.toml
- Name: 3tier-resolution-workspace

## ExplicitManifest
Discovered workspace at: 3tier-resolution-mixed/pixi.toml
- Name: 3tier-resolution-workspace
