crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__workspace_discoverer@3tier-resolution-mixed_package-with-pyproject.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: combined_snapshot
---
## SearchRoot
Discovered workspace at: 3tier-resolution-mixed/pixi.toml
- Name: 3tier-resolution-workspace
Package: 3tier-resolution-workspace @ 1.0.0

## ExplicitManifest
Discovered workspace at: 3tier-resolution-mixed/pixi.toml
- Name: 3tier-resolution-workspace
Package: 3tier-resolution-workspace @ 1.0.0
