crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__workspace_discoverer@3tier-resolution-pyproject.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: combined_snapshot
---
## SearchRoot
  × the workspace does not define a 'version'
    ╭─[<CARGO_ROOT>/tests/data/workspace-discovery/3tier-resolution-pyproject/pyproject.toml:10:11]
  9 │ name = "explicit-package-name"     # Tier 1: Direct value
 10 │ version = { workspace = true }     # Tier 2: Workspace inheritance
    ·           ────────────────────
 11 │ # authors not specified - should use tier 3 project defaults
    ╰────
## ExplicitManifest
  × the workspace does not define a 'version'
    ╭─[<CARGO_ROOT>/tests/data/workspace-discovery/3tier-resolution-pyproject/pyproject.toml:10:11]
  9 │ name = "explicit-package-name"     # Tier 1: Direct value
 10 │ version = { workspace = true }     # Tier 2: Workspace inheritance
    ·           ────────────────────
 11 │ # authors not specified - should use tier 3 project defaults
    ╰────
