crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__workspace_discoverer@empty.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: combined_snapshot
---
## SearchRoot
Discovered workspace at: pixi.toml
- Name: workspace-discovery
Package: workspace-discovery @ 0.1.0

## ExplicitManifest
  × unrecognized manifest file format. Expected either pixi.toml or pyproject.toml.
