crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__workspace_discoverer@inherit_readme_nested.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: combined_snapshot
---
## SearchRoot
Discovered workspace at: inherit_readme/pixi.toml
- Name: ??
Package: my-package @ 0.1.0

## ExplicitManifest
Discovered workspace at: inherit_readme/pixi.toml
- Name: ??
Package: my-package @ 0.1.0
