crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__workspace_discoverer@invalid_inherit.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: combined_snapshot
---
## SearchRoot
  × `workspace` cannot be false
    ╭─[<CARGO_ROOT>/tests/data/workspace-discovery/invalid_inherit/pixi.toml:9:22]
  8 │ # This should error because `workspace = false` is illegal.
  9 │ name = { workspace = false }
    ·                      ─────
 10 │
    ╰────
  help: By default no fields are inherited from the workspace
## ExplicitManifest
  × `workspace` cannot be false
    ╭─[<CARGO_ROOT>/tests/data/workspace-discovery/invalid_inherit/pixi.toml:9:22]
  8 │ # This should error because `workspace = false` is illegal.
  9 │ name = { workspace = false }
    ·                      ─────
 10 │
    ╰────
  help: By default no fields are inherited from the workspace
