crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__workspace_discoverer@nested-pyproject-workspace_nested-non-pixi-pyproject.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: combined_snapshot
---
## SearchRoot
Discovered workspace at: nested-pyproject-workspace/pyproject.toml
- Name: nested-pyproject-workspace

## ExplicitManifest
  × Missing table in manifest pyproject.toml:
  │ Any of the following sections is required:
  │ * tool.pixi.workspace
  │ * tool.pixi.project
  │ * tool.pixi.package
   ╭─[<CARGO_ROOT>/tests/data/workspace-discovery/nested-pyproject-workspace/nested-non-pixi-pyproject/pyproject.toml:1:1]
 1 │ [project]
   · ─
 2 │ name = "nested-non-pixi-pyproject"
   ╰────
  help: Check your manifest for a [tool.pixi.*] table. See https://pixi.sh/latest/python/pyproject_toml for more information.
